Create BlogBundle strat

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,26 +1,2 @@
-app:
-    resource: "@AppBundle/Controller/"
-    type:     annotation
-
-blog_list:
-    path:      /blog/{page}
-    defaults:  { _controller: AppBundle:Blog:list }
-    requirements:
-            page: '\d+'
-
-blog_show:
-    path:      /blog/{slug}
-    defaults:  { _controller: AppBundle:Blog:show }
-
-
-article_show:
-    path:      /article/{slug}
-    defaults:  { _controller: AppBundle:Article:show }
-
-welcome:
-    path:      /welcome
-    defaults:  { _controller: AppBundle:Welcome:show}
-
-test:
-    resource: "@TestBundle/Resources/config/routing.yml"
-    prefix:    /
+blog:
+    resource: "@BlogBundle/Resources/config/routing.yml"
