--- a/src/BlogBundle/Resources/config/routing.yml
+++ b/src/BlogBundle/Resources/config/routing.yml
@@ -1,3 +1,17 @@
 homepage:
     path: /
     defaults: { _controller: BlogBundle:Blog:homepage }
+
+blog_teaser:
+    path: /teaser
+    defaults: { _controller: BlogBundle:Blog:teaser }
+
+blog_view:
+    path: /blog/{id}
+    defaults: { _controller: BlogBundle:Blog:blogView }
+    requirements:
+      id: \d+
+
+blog_about_us:
+    path: /about_us
+    defaults: { _controller: BlogBundle:Blog:aboutAs }
