--- a/src/BlogBundle/Resources/config/routing.yml
+++ b/src/BlogBundle/Resources/config/routing.yml
@@ -15,3 +15,7 @@ blog_view:
 blog_about_us:
     path: /about_us
     defaults: { _controller: BlogBundle:Blog:aboutAs }
+
+show:
+    path: /show
+    defaults: { _controller: BlogBundle:Page:show }
