--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -5,8 +5,14 @@ security:
     # http://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
     providers:
         in_memory:
-            memory: ~
-
+           memory:
+              users:
+                  ryan:
+                      password: ryanpass
+                      roles: 'ROLE_USER'
+                  admin:
+                      password: $2y$12$mQkuJxmYvLCcRWfpTwM03OTSt865AgQ7rvnAXaPvzaOyt30knoK9K
+                      roles: 'ROLE_ADMIN'
     firewalls:
         # disables authentication for assets and the profiler, adapt it according to your needs
         dev:
@@ -17,8 +23,17 @@ security:
             anonymous: ~
             # activate different ways to authenticate
 
-            # http_basic: ~
+            http_basic: ~
             # http://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
 
             # form_login: ~
             # http://symfony.com/doc/current/cookbook/security/form_login_setup.html
+
+    access_control:
+            # require ROLE_ADMIN for /admin*
+            - { path: ^/admin, roles: ROLE_ADMIN }
+
+    encoders:
+             Symfony\Component\Security\Core\User\User:
+                  algorithm: bcrypt
+                  cost: 12
